@@ -1,6 +1,8 @@
 14 June 2018: Wouter
 	- #4103: Fix that auth-zone does not insist on SOA record first in
 	  file for url downloads.
+	- Fix that first control-interface determines if TLS is used.  Warn
+	  when IP address interfaces are used without TLS.
 
 12 June 2018: Ralph
 	- Don't count CNAME response types received during qname minimisation as
